--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,7 @@
     <string name="description_post_save">Сохранить</string>
     <string name="menu_remove">Удалить</string>
     <string name="description_post_like">Понравилось</string>
+    <string name="chooser_share_post">отправить</string>
+    <string name="enter_the_text_of_the_post">Введите текст поста</string>
+    <string name="save_post">Сохранить пост</string>
 </resources>
